--- a/Express/package.json
+++ b/Express/package.json
@@ -19,6 +19,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
+    "multer": "^2.0.2",
     "path": "^0.12.7",
     "pdfkit": "^0.17.1"
   },
